# mdv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README-RU.md  README.md  flake.nix
.github/workflows/: build.yml
docs/examples/: config.yaml  sample.md
docs/examples/themes/: theme-custom.yaml  theme-warm.yaml
snap/: snapcraft.yaml
src/: callout.rs  checkbox.rs  checkbox_override.rs  cli.rs  config.rs  custom_code_block.rs  editor.rs  error.rs  lib.rs  list_marker.rs  main.rs  markdown.rs  math.rs  monitor.rs  pager.rs  table.rs  terminal.rs  theme.rs  user_themes.rs  utils.rs
src/renderer/: mod.rs  syntax_set.rs  syntax_theme.rs  terminal.rs  tests.rs
src/renderer/event/: code.rs  core.rs  footnotes.rs  formatting.rs  headings.rs  html.rs  images.rs  links.rs  math.rs  misc.rs  mod.rs  soft_breaks.rs  tables.rs  text.rs
tests/: callouts.rs  checkboxes.rs  cli_basic.rs  code_blocks.rs  footnotes.rs  integration_tests.rs  layout.rs  links_tables.rs  math.rs  media.rs  syntax_palette.rs  visibility.rs
tests/callouts/: basic.rs  customization.rs  formatting.rs  heading_layout.rs  tables_links.rs
tests/code_blocks/: basic.rs  blockquotes.rs  icons.rs  pretty.rs  spacing.rs  tab_indent.rs  wrap_indent.rs
tests/footnotes/: attached.rs  ordering.rs  placement.rs  validation.rs
tests/layout/: blockquotes.rs  headings.rs  spacing.rs
tests/links_tables/: basic.rs  code_blocks.rs  references.rs  smart_indent.rs  truncation.rs
