[package]
name = "mdv"
version = "1.0.0"
edition = "2024"
authors = ["WhoSowSee"]
description = "Terminal Markdown Viewer"
license = "MIT"
repository = "https://github.com/WhoSowSee/mdv"
keywords = ["markdown", "terminal", "viewer", "cli"]
categories = ["command-line-utilities", "text-processing"]
rust-version = "1.89.0"

exclude = [
    "docs/images",
	".github",
	"snap"
]

[[bin]]
name = "mdv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.49", features = ["derive", "color"] }
pulldown-cmark = { version = "0.13.0", features = ["simd"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
syntect = "5.3.0"
crossterm = "0.29.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
regex = "1.12.2"
once_cell = "1.21.3"
dirs = "6.0.0"
notify = "8.2.0"
unicode-width = "0.2.2"
log = "0.4.28"
env_logger = "0.11.8"
comfy-table = "7.2.1"

[dev-dependencies]
tempfile = "3.23.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
